--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
     "@babel/preset-flow",
-    ["@babel/env", { "targets": { "node": "current" } }]
+    ["@babel/preset-env", {
+      "targets": {"node": "current"}
+    }]
+  ],
+  "plugins": [
+    ["@babel/plugin-proposal-object-rest-spread", { "useBuiltIns": true }]
   ]
 }
