--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
     }]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-object-rest-spread", { "useBuiltIns": true }]
+    ["@babel/plugin-proposal-object-rest-spread", { "useBuiltIns": true }],
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
