--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   ],
   "jest": {
     "testEnvironment": "node",
-    "testMatch": ["**/__tests__/**/(*.)(spec|test).js"],
+    "testMatch": [
+      "**/__tests__/**/(*.)(spec|test).js"
+    ],
     "roots": [
       "<rootDir>/src/"
     ]
@@ -40,6 +42,7 @@
     "@babel/core": "^7.0.0-beta.39",
     "@babel/node": "^7.0.0-beta.39",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.39",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.39",
     "@babel/preset-env": "^7.0.0-beta.39",
     "@babel/preset-flow": "^7.0.0-beta.39",
     "babel-core": "^7.0.0-bridge.0",
