adding repository to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@fabiomcosta/mvjs",
   "version": "1.0.0",
   "description": "Moves JavaScript modules and updates their reference on other modules inside the current project.",
+  "repository": "https://github.com/fabiomcosta/mvjs",
   "main": "lib/index.js",
   "bin": {
     "mvjs": "lib/cli.js"
