properly configuring eslint and updating files after the error/warnings

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "mvjs": "lib/cli.js"
   },
   "scripts": {
-    "test": "npm run flow && npm run unit",
+    "test": "npm run lint && npm run flow && npm run unit",
     "flow": "flow",
     "flow-typed": "flow-typed",
+    "lint": "eslint src/",
     "unit": "jest",
     "prepublishOnly": "rimraf lib/ && npm run build",
     "build": "babel src/ -d lib/ --copy-files",
@@ -52,8 +53,12 @@
     "@babel/preset-env": "^7.0.0-beta.39",
     "@babel/preset-flow": "^7.0.0-beta.39",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^8.2.1",
     "babel-jest": "^22.1.0",
     "eslint": "^4.17.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-flowtype": "^2.44.0",
+    "eslint-plugin-jest": "^21.12.1",
     "flow-bin": "^0.64.0",
     "flow-typed": "^2.3.0",
     "jest": "^22.2.2",
