--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run lint && npm run flow && npm run unit",
     "flow": "flow",
     "flow-typed": "flow-typed",
-    "lint": "eslint src/",
+    "lint": "eslint --fix src/",
     "unit": "jest",
     "prepublishOnly": "rimraf lib/ && npm run build",
     "build": "babel src/ -d lib/ --copy-files",
