Using fast-memoize to avoid parsing base64+json objects once for each transformed file. Should yield a nice perf win when moving large amounts of files

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ast-types-flow": "0.0.7",
     "chalk": "^2.3.1",
     "debug": "^3.1.0",
+    "fast-memoize": "^2.3.0",
     "find-up": "^2.1.0",
     "glob": "^7.1.2",
     "jscodeshift": "^0.4.0",
