creating files on the tmp fs concurrently, which made the integration tests run significantly faster

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "flow-bin": "^0.66.0",
     "flow-typed": "^2.3.0",
     "jest": "^22.2.2",
+    "mkdirp": "^0.5.1",
     "rimraf": "^2.6.2"
   }
 }
