--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "flow-typed": "flow-typed",
     "lint": "eslint --fix src/",
     "unit": "jest",
-    "prepublishOnly": "rimraf lib/ && npm run build && npm t",
+    "prepublishOnly": "node -e 'require(`fs-extra`).removeSync(`lib/`)' && npm run build && npm t",
     "build": "babel src/ -d lib/ --copy-files",
     "build:watch": "npm run build -- --watch"
   },
@@ -42,6 +42,7 @@
     "debug": "^3.1.0",
     "fast-memoize": "^2.3.0",
     "find-up": "^2.1.0",
+    "fs-extra": "^5.0.0",
     "jscodeshift": "^0.4.0",
     "yargs": "^11.0.0"
   },
@@ -62,8 +63,6 @@
     "eslint-plugin-jest": "^21.12.1",
     "flow-bin": "^0.66.0",
     "flow-typed": "^2.3.0",
-    "jest": "^22.2.2",
-    "mkdirp": "^0.5.1",
-    "rimraf": "^2.6.2"
+    "jest": "^22.2.2"
   }
 }
