--- a/package.json
+++ b/package.json
@@ -35,34 +35,34 @@
   "author": "Fabio Miranda Costa",
   "license": "MIT",
   "dependencies": {
-    "@babel/code-frame": "^7.0.0-beta.40",
-    "@babel/polyfill": "^7.0.0-beta.40",
+    "@babel/code-frame": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "ast-types-flow": "0.0.7",
-    "chalk": "^2.3.1",
-    "debug": "^3.1.0",
-    "fast-memoize": "^2.3.0",
+    "chalk": "^2.4.1",
+    "debug": "^3.2.5",
+    "fast-memoize": "^2.5.1",
     "find-up": "^2.1.0",
     "fs-extra": "^5.0.0",
-    "jscodeshift": "^0.4.0",
-    "yargs": "^11.0.0"
+    "jscodeshift": "^0.4.1",
+    "yargs": "^11.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/node": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.40",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "@babel/preset-flow": "^7.0.0-beta.40",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.1.0",
-    "eslint": "^4.17.0",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^22.4.4",
+    "eslint": "^4.19.1",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-flowtype": "^2.44.0",
-    "eslint-plugin-jest": "^21.12.1",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-jest": "^21.23.0",
     "flow-bin": "^0.66.0",
-    "flow-typed": "^2.3.0",
-    "jest": "^22.2.2"
+    "flow-typed": "^2.5.1",
+    "jest": "^22.4.4"
   }
 }
