--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "debug": "^4.1.1",
     "find-up": "^4.1.0",
     "fs-extra": "^8.1.0",
+    "isbinaryfile": "^4.0.4",
     "jscodeshift": "^0.6.4",
     "yargs": "^13.3.0"
   },
