--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,12 @@
 {
   root: true,
-  extends: ["eslint:recommended", "plugin:jest/recommended"],
+  extends: ["eslint:recommended", "plugin:jest/recommended", "plugin:flowtype/recommended"],
   plugins: ["flowtype", "babel", "jest"],
+  parser: "babel-eslint",
   env: {
     node: true,
     es6: true,
     "jest/globals": true
-  },
-  parser: "babel-eslint",
-  parserOptions: {
-    ecmaFeatures: {
-      experimentalObjectRestSpread: true
-    }
   },
   settings: {
     flowtype: {
@@ -19,6 +14,7 @@
     }
   },
   rules: {
+  "flowtype/no-primitive-constructor-types": 2,
     "no-case-declarations": 0,
     "object-curly-spacing": 2
   }
