--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chalk": "^3.0.0",
     "core-js": "^3.6.4",
     "debug": "^4.1.1",
+    "enhanced-resolve": "^4.1.1",
     "find-up": "^4.1.0",
     "fs-extra": "^8.1.0",
     "isbinaryfile": "^4.0.4",
