--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "enhanced-resolve": "^4.1.1",
     "find-up": "^4.1.0",
     "fs-extra": "^8.1.0",
+    "ignore": "^5.1.4",
     "isbinaryfile": "^4.0.6",
     "jscodeshift": "^0.7.1",
     "yargs": "^15.3.1"
