--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": [
     "@babel/preset-flow",
+    "@babel/preset-typescript",
     ["@babel/preset-env", {
       "useBuiltIns": "usage",
       "corejs": 3,
