--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "test": "npm run lint && npm run flow && npm run unit",
-    "flow": "flow",
-    "flow-typed": "flow-typed",
-    "lint": "eslint --fix src/",
+    "test": "npm run lint && npm run check-types && npm run unit",
+    "check-types": "tsc",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix src/",
     "unit": "npm run build && jest",
     "prepublishOnly": "node -e 'require(`fs-extra`).removeSync(`lib/`)' && npm t",
     "build": "babel src/ -d lib/ --copy-files",
@@ -40,7 +39,6 @@
   "license": "MIT",
   "dependencies": {
     "@babel/code-frame": "^7.8.3",
-    "ast-types-flow": "0.0.7",
     "chalk": "^3.0.0",
     "core-js": "^3.6.5",
     "debug": "^4.1.1",
@@ -57,15 +55,21 @@
     "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
-    "@babel/preset-flow": "^7.9.0",
+    "@babel/preset-typescript": "^7.10.1",
+    "@types/babel__code-frame": "^7.0.1",
+    "@types/debug": "^4.1.5",
+    "@types/enhanced-resolve": "^3.0.6",
+    "@types/fs-extra": "^9.0.1",
+    "@types/jest": "^25.2.3",
+    "@types/jscodeshift": "^0.7.1",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-jest": "^23.9.0",
-    "flow-bin": "^0.124.0",
-    "flow-typed": "^3.1.0",
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.3"
   }
 }
