--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "scripts": {
     "test": "npm run lint && npm run check-types && npm run unit",
     "check-types": "tsc",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix src/",
-    "format-all": "prettier --write ./src",
+    "lint": "prettier --write ./src && eslint --ext .js,.jsx,.ts,.tsx --fix src/",
     "unit": "npm run build && jest",
     "prepublishOnly": "node -e 'require(`fs-extra`).removeSync(`lib/`)' && npm t",
     "build": "babel src/ -d lib/ --copy-files",
