--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/code-frame": "^7.8.3",
-    "chalk": "^3.0.0",
+    "chalk": "^4.0.0",
     "core-js": "^3.6.5",
     "debug": "^4.1.1",
     "enhanced-resolve": "^4.1.1",
@@ -68,9 +68,9 @@
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jest": "^23.9.0",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.9.3",
     "jest": "^26.0.1",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.3"
   }
 }
