--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "jest": {
     "testEnvironment": "node",
     "testMatch": [
-      "**/__tests__/**/(*.)(spec|test).js"
+      "**/__tests__/**/(*.)(spec|test).(js|jsx|ts|tsx)"
     ],
     "roots": [
       "<rootDir>/src/"
@@ -52,9 +52,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "@babel/preset-typescript": "^7.10.1",
     "@types/babel__code-frame": "^7.0.1",
     "@types/debug": "^4.1.5",
@@ -62,12 +62,13 @@
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^25.2.3",
     "@types/jscodeshift": "^0.7.1",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
-    "eslint": "^6.8.0",
+    "eslint": "^7.2.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-jest": "^23.9.0",
+    "eslint-plugin-jest": "^23.13.2",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.0",
