--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Easily move files and directories around your JavaScript project.",
   "repository": "https://github.com/fabiomcosta/mvjs",
   "main": "lib/index.js",
+  "types": "lib/src/index.d.ts",
   "bin": {
     "mvjs": "lib/cli.js"
   },
@@ -12,12 +13,16 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "test": "npm run lint && npm run check-types && npm run unit",
-    "check-types": "tsc",
+    "test": "npm run lint && npm run type-check && npm run unit",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
     "lint": "prettier --write ./src && eslint --ext .js,.jsx,.ts,.tsx --fix src/",
-    "unit": "npm run build && jest",
-    "prepublishOnly": "node -e 'require(`fs-extra`).removeSync(`lib/`)' && npm t",
-    "build": "babel src/ -d lib/ --copy-files",
+    "unit": "npm run build:js && jest",
+    "prepare": "node -e 'require(`fs-extra`).removeSync(`lib/`)' && npm run build",
+    "prepublishOnly": "npm t",
+    "build": "npm run build:types && npm run build:js",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "build:types": "tsc --emitDeclarationOnly",
     "build:watch": "npm run build -- --watch"
   },
   "keywords": [
@@ -62,6 +67,7 @@
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^25.2.3",
     "@types/jscodeshift": "^0.7.1",
+    "@types/yargs": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "babel-jest": "^26.0.1",
